// Jest Snapshot v1, https://goo.gl/fbAQLP

<<<<<<< HEAD
exports[`Modal should render properly with some props assigned and being open 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="Card ModalCard test-class"
  closeTimeoutMS={0}
  contentLabel="Test"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[MockFunction]}
  portalClassName="ReactModalPortal"
  role="dialog"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <CloseButton
    disabled={false}
    onClick={[Function]}
  />
  <div
    className="scrollableContainer"
  >
    Test
  </div>
</Modal>
`;

exports[`Modal should render properly with some props assigned and not being open 1`] = `null`;

exports[`Modal should render with just required props passed 1`] = `null`;
=======
exports[`Modal should render with many props assigned 1`] = `null`;

exports[`Modal should render with required props 1`] = `null`;
>>>>>>> 1e3818fe1ed61deeda96881e0e7a718d44c1dd4e
